--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -142,6 +142,7 @@ tasks:
     - command: git.get_project
       params:
         directory: src
+    - command: manifest.load
     - command: git.apply_patch
       params:
         directory: src
