SERVER-27208: Turn on manifest for microbenchmarks
(cherry picked from commit 3e92b5297308e5a3691e630e4ff1e056e4785207)


Former-commit-id: a3c646de9d0a9298137d479777e7543cf314cd60

--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -195,6 +195,7 @@ tasks:
     - command: git.get_project
       params:
         directory: src
+    - command: manifest.load
     - command: git.apply_patch
       params:
         directory: src
