SERVER-25286 rewrite drop2.js to not depend on count scan yield behavior
(cherry picked from commit f738c9725fc1e2da0d6899e76f3edd226eacdea9 [formerly 703678d473121b6402df10c21060241096ee2722])

Conflicts:
    buildscripts/resmokeconfig/suites/sharded_collections_jscore_passthrough.yml
    buildscripts/resmokeconfig/suites/sharding_jscore_passthrough.yml

Former-commit-id: a10fb3c03e6770e94df1ffed7fc50457115aca78

--- a/buildscripts/resmokeconfig/suites/sharded_collections_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_collections_jscore_passthrough.yml
@@ -64,6 +64,7 @@ selector:
     - jstests/core/dbcase2.js
     - jstests/core/no_db_created.js
     - jstests/core/ns_length.js
+    - jstests/core/killop_drop_collection.js # Uses fsyncLock.
 
 executor:
   js_test:
