SERVER-25286 rewrite drop2.js to not depend on count scan yield behavior
(cherry picked from commit f738c9725fc1e2da0d6899e76f3edd226eacdea9 [formerly 703678d473121b6402df10c21060241096ee2722])

 Conflicts:
	buildscripts/resmokeconfig/suites/sharded_collections_jscore_passthrough.yml
	buildscripts/resmokeconfig/suites/sharding_jscore_passthrough.yml


Former-commit-id: 3c2c8f709d7043d22d1161fce807c40e4d624742

--- a/buildscripts/resmokeconfig/suites/sharded_collections_jscore_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_collections_jscore_passthrough.yml
@@ -68,6 +68,7 @@ selector:
     - jstests/core/eval0.js
     - jstests/core/eval7.js
     - jstests/core/eval9.js
+    - jstests/core/killop_drop_collection.js # Uses fsyncLock.
 
 executor:
   js_test:
