SERVER-27570: Enforce stricter checks on top level command BSON objects
(cherry picked from commit e56decc77d6830800bc557cd8980b83ab42000cd [formerly 957549cd11a34e0c92c9996eb564a6e2d6ada58a])


Former-commit-id: 74a3cb1bc1faee3d1aae2b207e41502fb5c98150

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -1824,6 +1824,15 @@ tasks:
       run_multiple_jobs: true
 
 - <<: *task_template
+  name: integration_tests_sharded
+  commands:
+  - func: "do setup"
+  - func: "run tests"
+    vars:
+      resmoke_args: --suites=integration_tests_sharded
+      run_multiple_jobs: true
+
+- <<: *task_template
   name: external_auth_WT
   commands:
   - func: "do setup"
@@ -3348,6 +3357,7 @@ buildvariants:
   - name: httpinterface
   - name: integration_tests_standalone
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: sharding_gle_auth_basics_passthrough
   - name: sharding_gle_auth_basics_passthrough_WT
   - name: sharding_gle_auth_basics_passthrough_write_cmd
@@ -3448,6 +3458,7 @@ buildvariants:
   - name: dbtest_WT
   - name: integration_tests_standalone
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: jsCore
   - name: jsCore_WT
   - name: parallel_WT
@@ -4355,6 +4366,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore_WT
   - name: jsCore_WT_ese
@@ -4867,6 +4879,7 @@ buildvariants:
   - name: httpinterface
   - name: integration_tests_standalone
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: jsCore
   - name: jsCore_WT
   - name: jsCore_compatibility
@@ -5576,6 +5589,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore
   - name: jsCore_WT
@@ -5808,6 +5822,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore
   - name: jsCore_WT
@@ -6322,6 +6337,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   # - name: jsCore
   - name: jsCore_WT
@@ -6457,6 +6473,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   # - name: jsCore
   - name: jsCore_WT
@@ -6975,6 +6992,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore_WT
   - name: jsCore_WT_ese
@@ -7239,6 +7257,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore_WT
   - name: jsCore_WT_ese
@@ -7896,6 +7915,7 @@ buildvariants:
   - name: gle_auth_basics_passthrough_write_cmd
   - name: gle_auth_write_cmd
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore
   - name: jsCore_WT
@@ -7976,6 +7996,7 @@ buildvariants:
   - name: httpinterface
   - name: integration_tests_standalone
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: sharding_gle_auth_basics_passthrough
   - name: sharding_gle_auth_basics_passthrough_write_cmd
   - name: jsCore
@@ -8058,6 +8079,7 @@ buildvariants:
   - name: gle_auth_basics_passthrough_write_cmd
   - name: gle_auth_write_cmd
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore
   - name: jsCore_WT
@@ -8144,6 +8166,7 @@ buildvariants:
   - name: gle_auth_basics_passthrough_write_cmd
   - name: gle_auth_write_cmd
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore
   - name: jsCore_WT
@@ -8315,6 +8338,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore
   - name: jsCore_WT
@@ -8489,6 +8513,7 @@ buildvariants:
   - name: gle_auth_write_cmd_WT
   - name: httpinterface
   - name: integration_tests_replset
+  - name: integration_tests_sharded
   - name: integration_tests_standalone
   - name: jsCore
   - name: jsCore_WT
