SERVER-27582 initialize lastVote properly
(cherry picked from commit 5c96307a6eee46b70a688d2c2fd9808574db041f [formerly e5b42cc86c8b97c84c6bec4e9e41ea5f3064e2b4])


Former-commit-id: 3dc538cc7d564a4894f6c958eb60c64f91998d0e

--- a/buildscripts/resmokeconfig/suites/replica_sets_legacy.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_legacy.yml
@@ -15,6 +15,8 @@ selector:
     - jstests/replsets/read_majority_two_arbs.js
     # The combination of new bridges and PV0 can lead to an improper spanning tree in sync2.js.
     - jstests/replsets/sync2.js
+    # PV0 does not persist the last vote
+    - jstests/replsets/last_vote.js
 
 executor:
   js_test:
