SERVER-27125 Arbiters in PV1 vote no if they can see a healthy primary of equal or greater priority to the candidate
(cherry picked from commit 1d001f9af02b5ebcc72791d701ae5038eb49df52 [formerly 97718a410d3d40f5c3f01dfae76e7ddd910897af])


Former-commit-id: ef3e1bc78e997f0d9f22f45aeb1d8e3b6ac14a14

--- a/buildscripts/resmokeconfig/suites/replica_sets_legacy.yml
+++ b/buildscripts/resmokeconfig/suites/replica_sets_legacy.yml
@@ -19,6 +19,8 @@ selector:
     - jstests/replsets/last_vote.js
     # PV0's w:majority guarantees aren't strong enough for this test to pass.
     - jstests/replsets/write_concern_after_stepdown_and_stepup.js
+    # This test expects the server to log a PV1-only vote-not-granted reason
+    - jstests/replsets/no_flapping_during_network_partition.js
 
 executor:
   js_test:
