--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -86,6 +86,8 @@ selector:
     - jstests/sharding/explain_cmd_invalid_namespace.js
     # $graphLookup is not supported in versions <= 3.2
     - jstests/sharding/read_committed_lookup.js
+    # SERVER-27438: Preserves $comment in OP_QUERY and tests for this change.
+    - jstests/sharding/mongos_query_comment.js
 
 executor:
   js_test:
