SERVER-27420 explicitly parse first pipeline element in checkAuthForCommand
This also adds infrastructure to allow unit-testing the aggregation authorization code.


Former-commit-id: c114d37a74445f089b2320654c5ae7efa4c0e1ab

--- a/src/mongo/db/auth/SConscript
+++ b/src/mongo/db/auth/SConscript
@@ -178,3 +178,13 @@ env.CppUnitTest('authorization_manager_test', 'authorization_manager_test.cpp',
                 LIBDEPS=['authcore', 'authmocks', 'saslauth'])
 env.CppUnitTest('authorization_session_test', 'authorization_session_test.cpp',
                 LIBDEPS=['authcore', 'authmocks', 'saslauth'])
+
+env.Library(
+    target='authorization_session_for_test',
+    source=[
+        'authorization_session_for_test.cpp',
+    ],
+    LIBDEPS=[
+        'authcore',
+    ]
+)
