--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -4051,9 +4051,20 @@ buildvariants:
   - name: parallel_WT
   - name: parallel_compatibility_WT
   - name: concurrency_WT
+    distros:
+    # There is a known performance issue with the ubuntu1604-arm64-1.linaro.build.10gen.cc host
+    # that's part of the ubuntu1604-arm64-large pool. We run the concurrency tests only on the
+    # hosts from the ubuntu1604-arm64-small pool to work around this issue.
+    - ubuntu1604-arm64-small
   - name: concurrency_replication_WT
+    distros:
+    - ubuntu1604-arm64-small
   - name: concurrency_sharded_WT
+    distros:
+    - ubuntu1604-arm64-small
   - name: concurrency_simultaneous_WT
+    distros:
+    - ubuntu1604-arm64-small
   - name: replicasets_WT
   - name: replicasets_auth
   - name: replication_WT
@@ -4127,9 +4138,20 @@ buildvariants:
   - name: parallel_WT
   - name: parallel_compatibility_WT
   - name: concurrency_WT
+    distros:
+    # There is a known performance issue with the ubuntu1604-arm64-1.linaro.build.10gen.cc host
+    # that's part of the ubuntu1604-arm64-large pool. We run the concurrency tests only on the
+    # hosts from the ubuntu1604-arm64-small pool to work around this issue.
+    - ubuntu1604-arm64-small
   - name: concurrency_replication_WT
+    distros:
+    - ubuntu1604-arm64-small
   - name: concurrency_sharded_WT
+    distros:
+    - ubuntu1604-arm64-small
   - name: concurrency_simultaneous_WT
+    distros:
+    - ubuntu1604-arm64-small
   - name: replicasets_WT
   - name: replicasets_auth
   - name: replication_WT
