SERVER-24498 Write tests for linearizable reads in a sharded system
(cherry picked from commit 5e058f5977ec5463a2ac80e16603ecafd166a133 [formerly c13a04b4c30d45f78f218e6fe61971c15a3bbb4f])


Former-commit-id: b10ff79de022ea2ccd757f1f25dd88da3671fe04

--- a/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
+++ b/buildscripts/resmokeconfig/suites/sharding_last_stable_mongos_and_mixed_shards.yml
@@ -88,6 +88,8 @@ selector:
     - jstests/sharding/read_committed_lookup.js
     # SERVER-27438: Preserves $comment in OP_QUERY and tests for this change.
     - jstests/sharding/mongos_query_comment.js
+    # Can un-blacklist once BACKPORT-484 is finished and in 3.2 release
+    - jstests/sharding/linearizable_read_concern.js
 
 executor:
   js_test:
