--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -2289,6 +2289,7 @@ tasks:
   commands:
   - func: "do setup"
   - func: "run tests"
+    timeout_secs: 21600 # 6 hour timeout
     vars:
       resmoke_args: --suites=concurrency --storageEngine=mmapv1
 
@@ -2297,6 +2298,7 @@ tasks:
   commands:
   - func: "do setup"
   - func: "run tests"
+    timeout_secs: 21600 # 6 hour timeout
     vars:
       resmoke_args: --suites=concurrency --storageEngine=wiredTiger
 
@@ -2305,6 +2307,7 @@ tasks:
   commands:
   - func: "do setup"
   - func: "run tests"
+    timeout_secs: 21600 # 6 hour timeout
     vars:
       resmoke_args: --suites=concurrency_replication --storageEngine=mmapv1
 
@@ -2313,22 +2316,27 @@ tasks:
   commands:
   - func: "do setup"
   - func: "run tests"
+    timeout_secs: 21600 # 6 hour timeout
     vars:
       resmoke_args: --suites=concurrency_replication --storageEngine=wiredTiger
 
 - <<: *task_template
   name: concurrency_sharded
+  exec_timeout_secs: 43200 # 12 hour timeout for the task overall
   commands:
   - func: "do setup"
   - func: "run tests"
+    timeout_secs: 21600 # 6 hour timeout for each test
     vars:
       resmoke_args: --suites=concurrency_sharded --storageEngine=mmapv1
 
 - <<: *task_template
   name: concurrency_sharded_WT
+  exec_timeout_secs: 43200 # 12 hour timeout for the task overall
   commands:
   - func: "do setup"
   - func: "run tests"
+    timeout_secs: 21600 # 6 hour timeout for each test
     vars:
       resmoke_args: --suites=concurrency_sharded --storageEngine=wiredTiger
 
@@ -2337,7 +2345,7 @@ tasks:
   commands:
   - func: "do setup"
   - func: "run tests"
-    timeout_secs: 10800 # 3 hour timeout
+    timeout_secs: 21600 # 6 hour timeout
     vars:
       resmoke_args: --executor=concurrency jstests/concurrency/fsm_all_simultaneous.js --storageEngine=mmapv1
 
@@ -2346,6 +2354,7 @@ tasks:
   commands:
   - func: "do setup"
   - func: "run tests"
+    timeout_secs: 21600 # 6 hour timeout
     vars:
       resmoke_args: --executor=concurrency jstests/concurrency/fsm_all_simultaneous.js --storageEngine=wiredTiger
 
