SERVER-28067: Update sys-perf.yml to copy over cluster.json
(cherry picked from commit 80cbdc933259857979bd7022109e6f369c06fd67 [formerly 499d5f22e2b08e66ae9d7f60f5ecc13088d06082])


Former-commit-id: ab6d495b9b95f1d2e273010934a8fa34fb9a088e

--- a/etc/longevity.yml
+++ b/etc/longevity.yml
@@ -43,8 +43,8 @@ post:
           set -e
           set -o verbose
           # call terraform destroy twice to avoid AWS timeout
-          yes yes | ./terraform destroy
-          yes yes | ./terraform destroy
+          yes yes | ./terraform destroy --var-file=cluster.json
+          yes yes | ./terraform destroy --var-file=cluster.json
           # clean all file to be safe
           rm -rf *
           echo "Cluster DESTROYED."
@@ -219,8 +219,8 @@ functions:
           set -o verbose
           source ./dsienv.sh
           # destroy the EC2 cluster
-          yes yes | ./terraform destroy
-          yes yes | ./terraform destroy
+          yes yes | ./terraform destroy --var-file=cluster.json
+          yes yes | ./terraform destroy --var-file=cluster.json
           echo "Cluster DESTROYED."
           echo "All perf results"
           cd ..
