SERVER-25372 Make required builders top of patchbuild list
Former-commit-id: 5fd3b09434c9f088041ff758392a0884eb848340

--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -3041,7 +3041,7 @@ buildvariants:
   - name: push
 
 - name: enterprise-linux-64-amazon-ami
-  display_name: Enterprise Amazon Linux
+  display_name: "* Enterprise Amazon Linux"
   modules:
   - enterprise
   - mongo-tools
@@ -3468,7 +3468,7 @@ buildvariants:
     - rhel70
 
 - name: windows-64-2k8-debug
-  display_name: Windows 2008R2 DEBUG
+  display_name: "! Windows 2008R2 DEBUG"
   modules:
   - mongo-tools
   run_on:
@@ -3564,7 +3564,7 @@ buildvariants:
   - name: unittests
 
 - name: enterprise-windows-64
-  display_name: Enterprise Windows
+  display_name: "* Enterprise Windows"
   modules:
   - enterprise
   - mongo-tools
@@ -3984,7 +3984,7 @@ buildvariants:
     - rhel70
 
 - name: osx-107-debug
-  display_name: OS X 10.7 DEBUG
+  display_name: "* OS X 10.7 DEBUG"
   modules:
   - mongo-tools
   run_on:
@@ -4117,7 +4117,7 @@ buildvariants:
   - name: push
 
 - name: enterprise-rhel-62-64-bit
-  display_name: Enterprise RHEL 6.2
+  display_name: "! Enterprise RHEL 6.2"
   modules:
   - enterprise
   - mongo-tools
@@ -5252,7 +5252,7 @@ buildvariants:
 ###########################################
 
 - name: solaris-64-bit
-  display_name: Solaris
+  display_name: "* Solaris"
   modules:
   - mongo-tools
   run_on:
