SERVER-28111 Move ParallelSortClusteredCursor to mongo/s/client
And cleanup some of the sharding library dependencies.

(cherry picked from commit a1bdded9afcf307fa523a976b5331cdf6a7a44a7 [formerly 417c0158a6e154f9f6494b8db1b8358c379f7b99])


Former-commit-id: d50fe6a7b43302a9f8afd6b40702ce287caf0d86

--- a/src/mongo/s/client/SConscript
+++ b/src/mongo/s/client/SConscript
@@ -40,6 +40,20 @@ env.Library(
     ],
 )
 
+env.Library(
+    target='parallel',
+    source=[
+        'parallel.cpp',
+    ],
+    LIBDEPS=[
+        '$BUILD_DIR/mongo/base',
+        '$BUILD_DIR/mongo/db/bson/dotted_path_support',
+        '$BUILD_DIR/mongo/s/coreshard',
+        '$BUILD_DIR/mongo/util/net/network',
+        'sharding_client',
+    ],
+)
+
 env.CppUnitTest(
     target='sharding_client_test',
     source=[
@@ -102,8 +116,8 @@ env.CppUnitTest(
         'shard_local_test.cpp',
     ],
     LIBDEPS=[
-        'shard_local',
         '$BUILD_DIR/mongo/db/repl/replmocks',
         '$BUILD_DIR/mongo/db/service_context_d_test_fixture',
+        'shard_local',
     ],
 )
